# eme

./: .gitignore  CNAME  PINECONE_MIGRATION.md  README.md  fetch_groupme_messages.sh  index.html  messages.jsonl  start_services.sh
.github/workflows/: ci.yml  deploy-docs-only.yml  deploy.yml  python-tests.yaml
assets/: index-BO1I0ltp.js  index-C128zdQm.js  index-C9jOaIQK.js  index-CCXqwhH9.js  index-CZOISb-D.css  index-DKkndRlF.js  index-DhBLYb-J.js  index-DlLMP2FH.css  index-_3TAfZTD.js
docs/: .gitignore  docusaurus.config.ts
docs/docs/: intro.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: CNAME
server/: .dockerignore  Dockerfile  MIGRATION_SUMMARY.md  Procfile  app.py  logging_config.py  pyproject.toml  requirements.txt
server/chroma-data/2aacbe06-121f-47f6-a668-9c2a21b87705/: index_metadata.pickle
server/config/: settings.py
server/data/raw/: messages.jsonl
server/data/raw/__MACOSX/paper-data-PdbaRa1/: ._plan.json
server/index/chroma/f853b1b9-a4c3-458a-8547-441f57d55180/: index_metadata.pickle
server/ingestion/: __init__.py  loader.py  models.py  papernu_loader.py
server/rag/: pipeline.py  pipeline_groupme.py  pipeline_papernu.py
server/scripts/: build_index.py  build_index_papernu.py  build_pinecone_index.py  chat.py  com.ec.groupme.fetch.plist  fetch_incremental_local.test.sh  test_pinecone_migration.py
server/tests/: test_loader_helpers.py  test_papernu_integration.py  test_pipeline_integration.py  test_pipeline_papernu.py
server/utils/: __init__.py  cleaning.py
(+5 files in other folders)
