[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.5.5",
    "fastapi>=0.116.1",
    "httpx<0.28",
    "openai>=1.35,<1.46",
    "orjson==3.10.7",
    "pandas==2.2.2",
    "pydantic-settings>=2.10.1",
    "python-dotenv==1.0.1",
    "tqdm==4.66.4",
    "uvicorn[standard]>=0.35.0",
]
